2005-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnotski.xml: Bump the app version number. No revisions.

2005-02-17  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Minor edit to a few puzzles.

2005-02-11  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Added hint targets for 8 more puzzles. 7 remain.

2005-02-03  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Second half of "Sunshine" removed as it requires a
	special feature... though at 345 moves, it's hard enough anyway.

2005-01-21  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (configure_pixmaps_idle): Blank pixbuf when the
	image is corrupt or loader fails.

2005-01-03  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (load_image): Preimage API update, uri -> file.

2004-12-16  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (create_statusbar): Fix indentations in source.
	(configure_pixmaps_idle): Fix thinko in handling of idle draw.

2004-12-13  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Replace "New Game" menu item with "Restart Puzzle"
	(expose_space): Draw when scaling, but not while changing levels.
	(gui_draw_space): New. Prepares GCs and the pixmap buffer, draws
	a border. Allows us to remove get_bg_color() and the old frame.
	(gui_draw_pixmap),(create_space): Support the new puzzle border.
	(configure_pixmaps),(confiugre_pixmaps_idle),(draw_all):
	Add an idle to draw_all() rather than call it right after we've
	finished rendering the SVG.
	(main)(create_statusbar): Switch from GnomeAppbar to GtkStatusbar.
	(prepare_map)(update_menu_state)(about_cb): Minor cleanup.

2004-11-15  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Fix Climb 24 Pro, it only had 23 pieces.
	(prepare_map): Free the new strdup.
	(level_cb): Start new game from radio actions only on new levels.

2004-11-14  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: New puzzles, GtkAction menus, misc changes.
	(*_cb): Support GtkAction